<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimulationActiviti">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/logo_decr"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12sp"
                android:layout_marginLeft="12sp"
                android:fontFamily="monospace"
                android:text="@string/nameOfApl"
                android:textSize="45sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/simulation"
            android:textColor="@android:color/holo_red_light"
            android:textSize="30sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/simulationPerson"
                android:layout_width="274dp"
                android:layout_height="60sp"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/simulationDlug"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="151dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:text="@string/predkosc" />

            <EditText
                android:id="@+id/predkosc"
                android:layout_width="113dp"
                android:layout_height="113dp"
                android:text="0"
                android:textSize="24sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:text="@string/prowizja" />

            <EditText
                android:id="@+id/prowizja"
                android:layout_width="113dp"
                android:layout_height="113dp"
                android:text="0"
                android:textSize="24sp" />

        </LinearLayout>
        <TextView
            android:id="@+id/timerView"
            android:layout_width="259dp"
            android:layout_height="97dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/buttonStart" />

            <Button
                android:id="@+id/buttonStop"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="70dp"
                android:text="@string/buttonStop" />

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="70dp"
                android:text="@string/buttonReset" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>