<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonActiviti">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/logo_decr"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12sp"
                android:layout_marginLeft="12sp"
                android:fontFamily="monospace"
                android:text="@string/nameOfApl"
                android:textSize="45sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/textVievImie"
                android:textColor="@android:color/holo_red_light" />

            <EditText
                android:id="@+id/editImie"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/textVievNazwisko"
                android:textColor="@android:color/holo_red_light" />

            <EditText
                android:id="@+id/editNazwisko"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/textVievDlug"
                android:textColor="@android:color/holo_red_light" />

            <EditText
                android:id="@+id/editDlug"
                android:layout_width="match_parent"
                android:layout_height="60dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSimulation"
                android:layout_width="174dp"
                android:layout_height="match_parent"
                android:background="@android:color/holo_red_light"
                android:text="@string/buttonSimulation"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/actionButton"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="60dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/buttonAdd"
                android:textColor="@android:color/background_light" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>